--- a/pipeline_for_inputs.ipynb
+++ b/pipeline_for_inputs.ipynb
@@ -19,6 +19,7 @@
    "source": [
     "import pandas as pd\n",
     "import re\n",
+    "import pickle\n",
     "from titlecase import titlecase\n",
     "from textblob import TextBlob\n",
     "from textstat.textstat import textstat\n",
@@ -35,9 +36,11 @@
    },
    "outputs": [],
    "source": [
-    "#read in the csv for modeling\n",
-    "data_1500_kf = pd.read_csv(\"full_data/english_books_final_deduped_2_to_1500.csv\", usecols=[\"proper_title\", \"age_in_2017\"])\n",
-    "data_1500_kf.dropna(inplace=True)"
+    "#I don't need to do this now because of the pickles\n",
+    "\n",
+    "# #read in the csv for modeling\n",
+    "# data_1500_kf = pd.read_csv(\"full_data/english_books_final_deduped_2_to_1500.csv\", usecols=[\"proper_title\", \"age_in_2017\"])\n",
+    "# data_1500_kf.dropna(inplace=True)"
    ]
   },
   {
@@ -48,7 +51,7 @@
    },
    "outputs": [],
    "source": [
-    "data_1500_kf.index = range(len(data_1500_kf))"
+    "# data_1500_kf.index = range(len(data_1500_kf))"
    ]
   },
   {
@@ -57,20 +60,9 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3831, 2)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data_1500_kf.shape"
+    "# data_1500_kf.shape"
    ]
   },
   {
@@ -224,15 +216,13 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#need to make a dataframe for dummies based on the training set\n",
     "#first get the training reading levels to use for dummies\n",
     "#this is NOT the way to do this--takes too long\n",
-    "data_1500_kf[\"reading_level\"] = data_1500_kf[\"proper_title\"].apply(reading_level_comp)"
+    "# data_1500_kf[\"reading_level\"] = data_1500_kf[\"proper_title\"].apply(reading_level_comp)"
    ]
   },
   {
@@ -241,33 +231,25 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       ..., \n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [1, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0]])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#make reading level from training set into a dummies df\n",
-    "lb_rl = LabelBinarizer()\n",
-    "lb_rl.fit_transform(data_1500_kf[\"reading_level\"])"
+    "# # make reading level from training set into a dummies df\n",
+    "# lb_rl = LabelBinarizer()\n",
+    "# lb_rl.fit_transform(data_1500_kf[\"reading_level\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb_rl = pickle.load(open('lb_for_rl.pkl', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +260,7 @@
        "        0, 0, 0, 0, 0]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +282,7 @@
        "(1, 49)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -324,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -336,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -345,65 +327,42 @@
     "#add topic modeling\n",
     "#make the CV model on the training set\n",
     "#NOTE: I can pickle this model for use in both the input pipeline and the model\n",
-    "cv_for_lda = CountVectorizer(min_df=5, max_df=.75, ngram_range=(1,3), stop_words=\"english\")\n",
+    "# cv_for_lda = CountVectorizer(min_df=5, max_df=.75, ngram_range=(1,3), stop_words=\"english\")\n",
     "\n",
-    "words = cv_for_lda.fit_transform(data_1500_kf[\"proper_title\"])"
+    "# words = cv_for_lda.fit_transform(data_1500_kf[\"proper_title\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/annafriedman/anaconda/lib/python3.6/site-packages/sklearn/decomposition/online_lda.py:508: DeprecationWarning: The default value for 'learning_method' will be changed from 'online' to 'batch' in the release 0.20. This warning was introduced in 0.18.\n",
-      "  DeprecationWarning)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "LatentDirichletAllocation(batch_size=128, doc_topic_prior=None,\n",
-       "             evaluate_every=-1, learning_decay=0.7, learning_method=None,\n",
-       "             learning_offset=50.0, max_doc_update_iter=100, max_iter=15,\n",
-       "             mean_change_tol=0.001, n_jobs=1, n_topics=8, perp_tol=0.1,\n",
-       "             random_state=3, topic_word_prior=2, total_samples=1000000.0,\n",
-       "             verbose=0)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#do the topic modeling on the training set\n",
     "#NOTE: as above re: pickling\n",
-    "lda_8 = LatentDirichletAllocation(n_topics=8, max_iter=15,\n",
-    "                                topic_word_prior=2,\n",
-    "                                learning_offset=50., random_state=3)\n",
+    "# lda_8 = LatentDirichletAllocation(n_topics=8, max_iter=15,\n",
+    "#                                 topic_word_prior=2,\n",
+    "#                                 learning_offset=50., random_state=3)\n",
     "\n",
-    "lda_8.fit(words)\n"
+    "# lda_8.fit(words)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#CountVectorize the words in the input string in keeping with the topic modeling model\n",
+    "cv_for_lda = pickle.load(open('cv_for_lda.pkl', 'rb'))\n",
     "input_words = cv_for_lda.transform(df_x[\"proper_title\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -414,7 +373,7 @@
        "(1, 772)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,20 +384,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#transform the input string using the training set model\n",
+    "lda_8 = pickle.load(open('ttpc_lda.pkl', 'rb'))\n",
     "transformed_data_8= lda_8.transform(input_words)\n",
     "transformed_data_8 = pd.DataFrame(transformed_data_8, columns=['Topic %s' % x for x in range(8)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +443,7 @@
        "0  0.01564  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -513,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -524,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +494,7 @@
        "Name: top_topic_number_lda8, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -561,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +530,7 @@
        "[0, 0, 0, 0, 1, 0, 0, 0]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -593,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -637,7 +597,7 @@
        "0  0  0  0  0  1  0  0  0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,62 +608,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<3831x923 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 13247 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#can use pickle now\n",
     "#tfidf vectorize the words in the training set:\n",
-    "tfidf = TfidfVectorizer(min_df=5, max_df=.95, lowercase=False, stop_words=\"english\", ngram_range=(1,3))\n",
-    "tfidf.fit_transform(data_1500_kf[\"proper_title\"])"
+    "# tfidf = TfidfVectorizer(min_df=5, max_df=.95, lowercase=False, stop_words=\"english\", ngram_range=(1,3))\n",
+    "# tfidf.fit_transform(data_1500_kf[\"proper_title\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "923"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(tfidf.vocabulary_)"
+    "# len(tfidf.vocabulary_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#transform the input into tfidf\n",
+    "tfidf = pickle.load(open('tfidf.pkl', 'rb'))\n",
     "tfidf_title = tfidf.transform(df_x[\"proper_title\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -716,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +664,7 @@
        "(1, 923)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,19 +675,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#make X to match model X (using X2 here to match the final model)\n",
-    "X2 = pd.concat([df_x[[\"age_in_2017\", \"sentiment_polarity\", \"sentiment_subjectivity\", \"number_of_words\", \"title_length\"]], top_topics_df, tfidf_title_df, reading_level_dummies], axis=1)\n"
+    "#make X to match model X (using X3 here to distinguish from older ones)\n",
+    "X3 = pd.concat([df_x[[\"age_in_2017\", \"sentiment_polarity\", \"sentiment_subjectivity\", \"number_of_words\", \"title_length\"]], top_topics_df, tfidf_title_df, reading_level_dummies], axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -822,18 +761,18 @@
        "[1 rows x 985 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X2"
+    "X3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -842,24 +781,22 @@
        "(1, 985)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X2.shape"
+    "X3.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 48,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "X2.to_csv(\"test_data/test titles/X2_Marking_Identityc_Maori_Tattoos_and_Cultural_History.csv\", index=False, encoding=\"utf-8\")"
+    "X3.to_csv(\"/Users/annafriedman/GA/GACapstoneProject/test_data/test titles/X3_Marking_Identityc_Maori_Tattoos_and_Cultural_History.csv\", index=False, encoding=\"utf-8\")"
    ]
   },
   {
